# SoccerView

./: .gitignore  CMakeLists.txt  README.md  SoccerView.kdev4
.kdev4/: SoccerView.kdev4
src/: DigitalClock.cpp  DigitalClock.h  SoccerViewer.cpp  SoccerViewer.h  cameraThread.cpp  main.cpp
